[package]
name = "app"
version = "0.1.0"
description = ""
authors = [ "THMonster" ]
license = ""
repository = ""
default-run = "app"
edition = "2021"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = [ "derive" ] }
tauri = { version = "1.0.6", features = ["api-all"] }
tokio = { version = "1", features = [ "full" ] }
reqwest = { version = "0.11", default-features = false, features = [ "brotli", "deflate", "gzip", "json", "rustls-tls" ] }
toml = "0.5"
anyhow = "1"
fancy-regex = "0.10"
directories = "4"
rand = "0.8"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
