[package]
name = "app"
version = "0.1.0"
description = ""
authors = [ "THMonster" ]
license = ""
repository = ""
default-run = "app"
edition = "2021"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = [ "derive" ] }
tauri = { version = "1.6.8", features = ["api-all"] }
tokio = { version = "1", features = [ "full" ] }
reqwest = { version = "0.12", default-features = false, features = [ "brotli", "deflate", "gzip", "json", "rustls-tls" ] }
toml = "0.8"
anyhow = "1"
fancy-regex = "0.13"
directories = "5"
rand = "0.8"
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
