[package]
name = "app"
version = "0.1.0"
description = ""
authors = [ "THMonster" ]
license = ""
repository = ""
default-run = "app"
edition = "2021"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.5.6", features = [] }

[dependencies]
dmlive = { path = "../../dmlive" }
serde_json = "1"
serde = { version = "1", features = [ "derive" ] }
tauri = { version = "1.8.3", features = ["api-all"] }
tokio = { version = "1", features = [ "full" ] }
reqwest = { version = "0.12", default-features = false, features = [ "brotli", "deflate", "gzip", "json", "rustls-tls" ] }
toml = "0.9"
anyhow = "1"
directories = "6"
rand = "0.9"
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
